--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </td>
     <td>
       <h1><em>ANJUSHREE SEN ➳</em></h1>
-      <h2> <em>⁕peronal info</em></h2>
+      <h2> <em>⁕personal info</em></h2>
       <ul>
         <li>
           gmail id:anjushreesen@gmail.com
