--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
 <table cellspacing="10">
   <tr>
     <td>
-      <img src="imagee.jpeg"width="200" height="200">
+      <img src="picture.jpeg"width="100" height="150">
     </td>
     <td>
       <h1><em>ANJUSHREE SEN ➳</em></h1>
-      <h2> <em>⁕personal info</em></h2>
-      <ul>
-        <li>
-          gmail id:anjushreesen@gmail.com
-        </li>
-        <li>
-          gender:female
-        </li>
-        <li>
-          school name:<a href="http://ashokhall.net/gdb/">G.D.Birla Centre for Education</a>
-        </li>
-        <li>
-          institution name:<a href="https://uem.edu.in/uem-kolkata/">University of Engineering and Management Kolkata</a>
-        </li>
-        <li>
-          qualification:btech cse(graduating in year 2024)
-        </li>
-      </ul>
-
     </td>
   </tr>
 </table>
-<h2>All you wanna know about me</h2>
+<hr />
+<h2> <em>⁕Peronal info:</em></h2>
+<ul>
+  <li>
+    Gmail id:anjushreesen@gmail.com
+  </li>
+  <li>
+    Gender:female
+  </li>
+  <li>
+    School name:<a href="http://ashokhall.net/gdb/">G.D.Birla Centre for Education</a>
+  </li>
+  <li>
+    Institution name:<a href="https://uem.edu.in/uem-kolkata/">University of Engineering and Management Kolkata</a>
+  </li>
+  <li>
+    Qualification:btech cse(graduating in year 2024)
+  </li>
+</ul>
+<hr />
 
-<h2><em>⁕Hobbies and extracuricular activities</em></h2>
+<h2><em>⁕Hobbies and extracuricular activities:-</em></h2>
 <ol type="i">
   <li>
     styling outfits
@@ -54,6 +54,7 @@
     and also coding during the free times
   </li>
 </ol>
+<hr />
 <h2><em>⁕skills</em></h2>
 <table border="1">
   <tr>
