--- a/index.html
+++ b/index.html
@@ -15,43 +15,46 @@
     </td>
   </tr>
 </table>
+<br />
+<br />
+
 <hr />
-<h2> <em>⁕Peronal info:</em></h2>
+<h3> <em>⁕Peronal info:</em></h3>
 <ul>
   <li>
-    Gmail id:anjushreesen@gmail.com
+  <h4>Gmail id:anjushreesen@gmail.com</h4>
   </li>
   <li>
     Gender:female
   </li>
   <li>
-    School name:<a href="http://ashokhall.net/gdb/">G.D.Birla Centre for Education</a>
+    <h4>School name:<a href="http://ashokhall.net/gdb/">G.D.Birla Centre for Education</a></h4>
   </li>
   <li>
-    Institution name:<a href="https://uem.edu.in/uem-kolkata/">University of Engineering and Management Kolkata</a>
+    <h4>Institution name:<a href="https://uem.edu.in/uem-kolkata/">University of Engineering and Management Kolkata</a></h4>
   </li>
   <li>
-    Qualification:btech cse(graduating in year 2024)
+    <h4>Qualification:btech cse(graduating in year 2024)</h4>
   </li>
 </ul>
 <hr />
 
-<h2><em>⁕Hobbies and extracuricular activities:-</em></h2>
+<h3><em>⁕Hobbies and extracuricular activities:-</em></h3>
 <ol type="i">
   <li>
-    styling outfits
+    <h4>styling outfits</h4>
   </li>
   <li>
-    dancing
+    <h4>dancing</h4>
   </li>
   <li>
-    quizing
+    <h4>quizing</h4>
   </li>
   <li>
-    binge watching web series and movies
+    <h4>binge watching web series and movies</h4>
   </li>
   <li>
-    and also coding during the free times
+   <h4>coding during the free times</h4> 
   </li>
 </ol>
 <hr />
