--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table cellspacing="10">
   <tr>
     <td>
-      <img src="picture.jpeg"width="200" height="250">
+      <img src="picture.jpeg"width="170" height="250">
     </td>
     <td>
       <h1><em>ANJUSHREE SEN ➳</em></h1>
@@ -62,34 +62,34 @@
 <table border="1">
   <tr>
     <td>
-      C
+      <h3>C</h3>
     </td>
     <td>
-     ✯✯
-    </td>
-  </tr>
-  <tr>
-    <td>
-      JAVA
-    </td>
-    <td>
-      ✯✯✯
+     <h3>✯✯</h3>
     </td>
   </tr>
   <tr>
     <td>
-      HTML
+      <h3>JAVA</h3>
     </td>
     <td>
-      ✯✯
+      <h3>✯✯✯</h3>
     </td>
   </tr>
   <tr>
     <td>
-    PYTHON
+      <h3>HTML</h3>
+    </td>
+    <td>
+      <h3>✯✯</h3>
+    </td>
+  </tr>
+  <tr>
+    <td>
+    <h3>PYTHON</h3>
   </td>
       <td>
-        ✯
+        <h3>✯</h3>
       </td>
 
   </tr>
