--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>💑Anjushree</title>
   </head>
-  <body style=background-color:lightblue;>
+  <body style=background-color:thistle;>
 <table cellspacing="10">
   <tr>
     <td>
