--- a/index.html
+++ b/index.html
@@ -4,91 +4,88 @@
     <meta charset="utf-8">
     <title>💑Anjushree</title>
   </head>
-  <body style=background-color:thistle;>
+  <body style=background-color:lightblue;>
 <table cellspacing="10">
   <tr>
     <td>
-      <img src="picture.jpeg"width="170" height="250">
+      <img src="imagee.jpeg"width="200" height="200">
     </td>
     <td>
       <h1><em>ANJUSHREE SEN ➳</em></h1>
+      <h2> <em>⁕peronal info</em></h2>
+      <ul>
+        <li>
+          gmail id:anjushreesen@gmail.com
+        </li>
+        <li>
+          gender:female
+        </li>
+        <li>
+          school name:<a href="http://ashokhall.net/gdb/">G.D.Birla Centre for Education</a>
+        </li>
+        <li>
+          institution name:<a href="https://uem.edu.in/uem-kolkata/">University of Engineering and Management Kolkata</a>
+        </li>
+        <li>
+          qualification:btech cse(graduating in year 2024)
+        </li>
+      </ul>
+
     </td>
   </tr>
 </table>
-<br />
+<h2>All you wanna know about me</h2>
 
-<hr />
-<h3> <em>⁕Peronal info:</em></h3>
-<ul>
-  <li>
-  <h4>Gmail id:anjushreesen@gmail.com</h4>
-  </li>
-  <li>
-    Gender:female
-  </li>
-  <li>
-    <h4>School name:<a href="http://ashokhall.net/gdb/">G.D.Birla Centre for Education</a></h4>
-  </li>
-  <li>
-    <h4>Institution name:<a href="https://uem.edu.in/uem-kolkata/">University of Engineering and Management Kolkata</a></h4>
-  </li>
-  <li>
-    <h4>Qualification:btech cse(graduating in year 2024)</h4>
-  </li>
-</ul>
-<hr />
-
-<h3><em>⁕Hobbies and extracuricular activities:-</em></h3>
+<h2><em>⁕Hobbies and extracuricular activities</em></h2>
 <ol type="i">
   <li>
-    <h4>styling outfits</h4>
+    styling outfits
   </li>
   <li>
-    <h4>dancing</h4>
+    dancing
   </li>
   <li>
-    <h4>quizing</h4>
+    quizing
   </li>
   <li>
-    <h4>binge watching web series and movies</h4>
+    binge watching web series and movies
   </li>
   <li>
-   <h4>coding during the free times</h4>
+    and also coding during the free times
   </li>
 </ol>
-<hr />
 <h2><em>⁕skills</em></h2>
 <table border="1">
   <tr>
     <td>
-      <h3>C</h3>
+      C
     </td>
     <td>
-     <h3>✯✯</h3>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <h3>JAVA</h3>
-    </td>
-    <td>
-      <h3>✯✯✯</h3>
+     ✯✯
     </td>
   </tr>
   <tr>
     <td>
-      <h3>HTML</h3>
+      JAVA
     </td>
     <td>
-      <h3>✯✯</h3>
+      ✯✯✯
     </td>
   </tr>
   <tr>
     <td>
-    <h3>PYTHON</h3>
+      HTML
+    </td>
+    <td>
+      ✯✯
+    </td>
+  </tr>
+  <tr>
+    <td>
+    PYTHON
   </td>
       <td>
-        <h3>✯</h3>
+        ✯
       </td>
 
   </tr>
