--- a/index.html
+++ b/index.html
@@ -2,93 +2,155 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>💑Anjushree</title>
-  </head>
-  <body style=background-color:lightblue;>
-<table cellspacing="10">
-  <tr>
-    <td>
-      <img src="imagee.jpeg"width="200" height="200">
-    </td>
-    <td>
-      <h1><em>ANJUSHREE SEN ➳</em></h1>
-      <h2> <em>⁕peronal info</em></h2>
-      <ul>
-        <li>
-          gmail id:anjushreesen@gmail.com
-        </li>
-        <li>
-          gender:female
-        </li>
-        <li>
-          school name:<a href="http://ashokhall.net/gdb/">G.D.Birla Centre for Education</a>
-        </li>
-        <li>
-          institution name:<a href="https://uem.edu.in/uem-kolkata/">University of Engineering and Management Kolkata</a>
-        </li>
-        <li>
-          qualification:btech cse(graduating in year 2024)
-        </li>
-      </ul>
+    <title>💑Anjushree
+    </title>
+</head>
+<style>
+.body{
 
-    </td>
-  </tr>
-</table>
-<h2>All you wanna know about me</h2>
+background-size: cover;
+background-color: 
 
-<h2><em>⁕Hobbies and extracuricular activities</em></h2>
-<ol type="i">
-  <li>
-    styling outfits
-  </li>
-  <li>
-    dancing
-  </li>
-  <li>
-    quizing
-  </li>
-  <li>
-    binge watching web series and movies
-  </li>
-  <li>
-    and also coding during the free times
-  </li>
-</ol>
-<h2><em>⁕skills</em></h2>
-<table border="1">
-  <tr>
-    <td>
-      C
-    </td>
-    <td>
-     ✯✯
-    </td>
-  </tr>
-  <tr>
-    <td>
-      JAVA
-    </td>
-    <td>
-      ✯✯✯
-    </td>
-  </tr>
-  <tr>
-    <td>
-      HTML
-    </td>
-    <td>
-      ✯✯
-    </td>
-  </tr>
-  <tr>
-    <td>
-    PYTHON
-  </td>
+}
+.head{
+  height:400px;
+  margin: 80px;
+  background-color: #E9967A;
+  text-align: center;
+  font-size: 50px;
+  align-items:center;
+  font-family: cursive;
+  color: white;
+
+}
+.im{
+
+  height: 1300px;
+  font-family: serif;
+  text-align: right;
+  background-size:cover;
+  background-image:url(https://i.pinimg.com/originals/d5/ca/40/d5ca40ed95adbc5d917953aa55f73090.jpg);
+  background-size: 1400px 1400px;
+}
+.cat{
+  height: 400px;
+  text-align: center;
+  background-image: url(https://i.pinimg.com/736x/48/01/6c/48016c3f276578eb477a870e764ea613.jpg);
+margin: 100px;
+text-emphasis:black;
+}
+.intro{
+  height:300px;
+ color: white;
+ text-align: center;
+background-image: url(https://wallpapercave.com/wp/wp6336679.jpg);
+margin:50px;
+}
+
+.headi{
+  font-family: sans-serif;
+  font-size: 20px;
+  text-align: center;
+  text-decoration-color:white;
+  text-decoration-style: wavy;
+  text-decoration: underline;
+  color: red;
+
+}
+.options{
+  font-style: italic;
+  font-family: cursive;
+  color:slateblue;
+}
+.soon{
+  text-align: center;
+  font-family: fantasy;
+  color: grey;
+  font-size: 10px;
+}
+  </style>
+
+  <body>
+    <button class="ptn">hello</button>
+    <div class="im">
+      <img src="AD.jpeg"width="300" height="250">
+    </div>
+    <br />
+    <br />
+    <br />
+
+
+
+<div class="head">
+      <h1>
+        <em>ADVAIT ➳</em></h1>
+        <h5><i>-As unique as you-</i></h5>
+
+</div>
+
+<br />
+<div class="intro">
+  <h2>
+    So here's a small intro ;)
+  </h2>
+<h4>Advait is an alternative for shopping applications. It is basically a
+one stop site catering to all your needs in the clothing department to bring out the diva inside you.</h4>
+<br />
+<br />
+<br />
+<h4>Buy, rent, sell – you are free to choose.</h4>
+</div>
+<div class="cat">
+  <br />
+  <br />
+  <br />
+  <h3> <em>CATEGORIES:</em></h3>
+  <br/>
+      clothings & essentials
+      <br />
+      dresses
+      <br />
+      tops & tshirts
+      <br/>
+      trousers & jeans
+      <br/>
+      skirts
+      <br />
+      <br />
+      <h3>ADVAIT EXCLUSIVE</h3>
+      <h5>-coming soon- :) </h5>
+</div>
+<div class="headi">
+  <h1>^^Choose your aesthetics^^</h1>
+</div>
+<div class="options">
+  <table cellspacing="100">
+    <tr>
       <td>
-        ✯
+        <img src="https://i.pinimg.com/736x/7d/9d/ac/7d9dacfb7b14e3c171042293ed351b6c.jpg" width="150" height="150"/>
+        <h3>-croptop,shirts & T-shirts-</h3>
       </td>
+      <td>
+        <img src="https://th.bing.com/th/id/OIP.s-MnCFxnQFRat38PjqPobgHaHa?w=178&h=180&c=7&o=5&pid=1.7https://th.bing.com/th/id/OIP.s-MnCFxnQFRat38PjqPobgHaHa?w=178&h=180&c=7&o=5&pid=1.7" width="150" height="150" />
+      <h3>-dresses-</h3>
+    </td>
+    <td>
+      <img src="https://th.bing.com/th/id/OIP.CDqudHVP5Rj_XYb21mX9tAHaHa?w=193&h=193&c=7&o=5&pid=1.7" width="150" height="150" />
+    <h3>-jeans & trousers-</h3></td>
+    <td>
+      <img src="https://th.bing.com/th/id/OIP.nBo7zPfEjJkHwAiiR0V32wHaJF?w=152&h=187&c=7&o=5&pid=1.7" width="150" height="150" />
+    <h3>-skirts-</h3>
+  </td>
+  <td>
+    <h4>ALL...</h4>
+  </td>
+    </tr>
+  </table>
+</div>
+<div class="soon">
+<h1>ADVAIT EXCLUSIVE</h1>
+<h4>coming soon</h4>
+</div>
 
-  </tr>
-</table>
   </body>
 </html>
